--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.buschmais.jqassistant.plugin</groupId>
     <artifactId>common</artifactId>
-    <version>1.11.0-SNAPSHOT</version>
+    <version>1.11.0-GA-SNAPSHOT</version>
 
     <name>jQAssistant Plugin Common</name>
     <url>http://jqassistant.org/</url>
